--- a/pwa/package.json
+++ b/pwa/package.json
@@ -55,6 +55,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "ngrx-store-freeze": "^0.2.4",
     "prettier": "1.16.4",
     "pretty-quick": "^1.10.0",
     "protractor": "~5.4.0",
